// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CartaoColeta /> matches last snapshot details 1`] = `
<View
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 5,
      "flexDirection": "row",
      "marginBottom": 10,
      "opacity": 1,
    }
  }
>
  <View
    backgroundColor="#FFF"
    hasBorder={true}
    style={
      Array [
        Object {
          "backgroundColor": "#FFF",
          "borderBottomLeftRadius": 5,
          "borderTopLeftRadius": 5,
          "width": 10,
        },
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "flexBasis": 0,
          "flexGrow": 1,
          "flexShrink": 1,
        },
      ]
    }
  >
    <View
      marginBottom={2}
      style={
        Array [
          Object {
            "alignItems": "flex-start",
            "flexBasis": 0,
            "flexDirection": "row",
            "flexGrow": 1,
            "flexShrink": 1,
            "justifyContent": "flex-start",
            "paddingBottom": 2,
            "paddingLeft": 10,
            "paddingRight": 10,
            "paddingTop": 10,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "height": 50,
              "marginRight": 5,
              "width": 50,
            },
          ]
        }
      >
        <Image
          source={1}
          style={
            Array [
              Object {
                "height": "100%",
                "width": "100%",
              },
            ]
          }
        />
      </View>
      <View
        style={
          Array [
            Object {
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
            },
          ]
        }
      >
        <Text
          color="#FFF"
          style={
            Array [
              Object {
                "color": "#FFF",
                "fontFamily": "Proxima-Bold",
                "fontSize": 16,
                "fontWeight": "500",
              },
            ]
          }
        >
          [MISSING "EN.COMPONENTS.COLLECTCARD.DELIVERY" TRANSLATION]
        </Text>
        <View
          style={
            Array [
              Object {
                "flexDirection": "row",
              },
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#3C3C3C",
                  "fontFamily": "Proxima-Bold",
                  "fontSize": 16,
                  "fontWeight": "500",
                },
              ]
            }
          >
            [missing "en.components.collectCard.OS" translation]
          </Text>
          <Text
            color="#FFF"
            style={
              Array [
                Object {
                  "color": "#FFF",
                  "fontFamily": "Proxima-Bold",
                  "fontSize": 16,
                  "fontWeight": "500",
                },
              ]
            }
          />
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "flex-end",
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#3C3C3C",
                "fontFamily": "Proxima-Bold",
                "fontSize": 16,
                "fontWeight": "500",
              },
            ]
          }
        >
          -
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#515151",
                "fontFamily": "Proxima-Semibold",
                "fontSize": 12,
                "fontWeight": "400",
              },
            ]
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<CartaoColeta /> matches last snapshot not details 1`] = `
<View
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 0,
      "flexDirection": "row",
      "marginBottom": 10,
      "opacity": 1,
    }
  }
>
  <View
    backgroundColor="#FFF"
    hasBorder={true}
    style={
      Array [
        Object {
          "backgroundColor": "#FFF",
          "borderBottomLeftRadius": 5,
          "borderTopLeftRadius": 5,
          "width": 10,
        },
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "flexBasis": 0,
          "flexGrow": 1,
          "flexShrink": 1,
        },
      ]
    }
  >
    <View
      marginBottom={2}
      style={
        Array [
          Object {
            "alignItems": "flex-start",
            "flexBasis": 0,
            "flexDirection": "row",
            "flexGrow": 1,
            "flexShrink": 1,
            "justifyContent": "flex-start",
            "paddingBottom": 2,
            "paddingLeft": 10,
            "paddingRight": 10,
            "paddingTop": 10,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "height": 50,
              "marginRight": 5,
              "width": 50,
            },
          ]
        }
      >
        <Image
          source={1}
          style={
            Array [
              Object {
                "height": "100%",
                "width": "100%",
              },
            ]
          }
        />
      </View>
      <View
        style={
          Array [
            Object {
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
            },
          ]
        }
      >
        <Text
          color="#FFF"
          style={
            Array [
              Object {
                "color": "#FFF",
                "fontFamily": "Proxima-Bold",
                "fontSize": 16,
                "fontWeight": "500",
              },
            ]
          }
        >
          [MISSING "EN.COMPONENTS.COLLECTCARD.DELIVERY" TRANSLATION]
        </Text>
        <View
          style={
            Array [
              Object {
                "flexDirection": "row",
              },
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#3C3C3C",
                  "fontFamily": "Proxima-Bold",
                  "fontSize": 16,
                  "fontWeight": "500",
                },
              ]
            }
          >
            [missing "en.components.collectCard.OS" translation]
          </Text>
          <Text
            color="#FFF"
            style={
              Array [
                Object {
                  "color": "#FFF",
                  "fontFamily": "Proxima-Bold",
                  "fontSize": 16,
                  "fontWeight": "500",
                },
              ]
            }
          />
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "flex-end",
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#3C3C3C",
                "fontFamily": "Proxima-Bold",
                "fontSize": 16,
                "fontWeight": "500",
              },
            ]
          }
        >
          -
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#515151",
                "fontFamily": "Proxima-Semibold",
                "fontSize": 12,
                "fontWeight": "400",
              },
            ]
          }
        >
          
        </Text>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "paddingBottom": 0,
            "paddingLeft": 10,
            "paddingRight": 10,
            "paddingTop": 0,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "flexBasis": 0,
              "flexDirection": "row",
              "flexGrow": 1,
              "flexShrink": 1,
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#515151",
                "fontFamily": "Proxima-Semibold",
                "fontSize": 14.5,
                "fontWeight": "400",
              },
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#515151",
                  "fontFamily": "Proxima-Semibold",
                  "fontSize": 14.5,
                  "fontWeight": "700",
                  "paddingRight": 5,
                },
              ]
            }
          >
            [missing "en.components.collectCard.reason" translation]
          </Text>
           
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "flexBasis": 0,
              "flexDirection": "row",
              "flexGrow": 1,
              "flexShrink": 1,
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#515151",
                "fontFamily": "Proxima-Semibold",
                "fontSize": 14.5,
                "fontWeight": "400",
              },
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#515151",
                  "fontFamily": "Proxima-Semibold",
                  "fontSize": 14.5,
                  "fontWeight": "700",
                  "paddingRight": 5,
                },
              ]
            }
          >
            [missing "en.components.collectCard.fantasia" translation]
          </Text>
           
        </Text>
      </View>
    </View>
    <View
      isBottom={true}
      justifyContent="flex-end"
      marginBottom={5}
      marginTop={0}
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexBasis": 0,
            "flexDirection": "row",
            "flexGrow": 1,
            "flexShrink": 1,
            "justifyContent": "flex-end",
            "paddingBottom": 5,
            "paddingLeft": 10,
            "paddingRight": 10,
            "paddingTop": 0,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#515151",
                "fontFamily": "Proxima-Semibold",
                "fontSize": 14.5,
                "fontWeight": "400",
              },
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#515151",
                  "fontFamily": "Proxima-Semibold",
                  "fontSize": 14.5,
                  "fontWeight": "700",
                  "paddingRight": 5,
                },
              ]
            }
          >
            [missing "en.components.collectCard.address" translation]
          </Text>
           
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "flexDirection": "row",
              "zIndex": 999,
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#F91E1E",
              "borderRadius": 5,
              "justifyContent": "center",
              "marginBottom": 0,
              "marginLeft": 2,
              "marginRight": 2,
              "marginTop": 0,
              "maxHeight": 25,
              "opacity": 1,
              "paddingBottom": 5,
              "paddingLeft": 5,
              "paddingRight": 5,
              "paddingTop": 5,
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontSize": 15,
                },
                Array [
                  Object {
                    "color": "#FFFFFF",
                  },
                ],
                Object {
                  "fontFamily": "Feather",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
        <View
          accessible={true}
          focusable={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#29D94C",
              "borderRadius": 5,
              "justifyContent": "center",
              "marginBottom": 0,
              "marginLeft": 2,
              "marginRight": 2,
              "marginTop": 0,
              "maxHeight": 25,
              "opacity": 1,
              "paddingBottom": 5,
              "paddingLeft": 5,
              "paddingRight": 5,
              "paddingTop": 5,
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontSize": 15,
                },
                Array [
                  Object {
                    "color": "#FFFFFF",
                  },
                ],
                Object {
                  "fontFamily": "Feather",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
